Set footer to bottom of page to fix overlap on checkout message

--- a/react-vite/src/components/CartManagement/CartManagements.css
+++ b/react-vite/src/components/CartManagement/CartManagements.css
@@ -98,12 +98,29 @@ h4 {
   padding: 10px 20px;
   cursor: pointer;
   margin-right: 10px;
+  margin-bottom: 10px;
   border-radius: 20px;
 }
 
 .cart-action-buttons button:hover {
   background-color: #d2ac2a;
 }
+
+.checkout-message-container {
+  position: sticky;
+  z-index: 1000;
+}
+
+.checkout-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
 
 .spinner {
   border: 8px solid rgba(0, 0, 0, 0.1);
